# car-end_BEV

./: CMakeLists.txt  README.md  cali_param.json  cali_param.txt  package.xml
config/: nuscenes_rviz.rviz  nuscenes_toBEV.rviz
include/bev_lidar_cali/: cam_BEV.hpp  camera_node.hpp  image_process.hpp  param_process.hpp
launch/: nuscenes_rviz.launch  nuscenes_toBEV.launch
src/: camera_node.cpp  image_process.cpp  img_publish.cpp  param_process.cpp  test_calibration_para.py  test_data_process.ipynb
test/: CMakeLists.txt  test_bev_cam.cpp  test_cam_publish.cpp  test_cut_img.cpp  test_get_points.cpp  test_join_img_feature.cpp  test_read_json.cpp
